tests/snapshots/02_booleans__and_true_false.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/02_booleans/and_true_false.lam
---
false

term
  nodes: 24
  depth: 9

eval
  steps:    7
  reduces:  7
  allocs:   14
  time:     [time]
